I added new main tag to index.html

--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
     <header>
         <h1>Welcome to our website</h1>
     </header>
+    <main>
+        <div class="container">
+            <h2>Our products</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, hic nostrum veritatis culpa vel explicabo velit, amet iusto quia nesciunt at corporis ex iste ipsa?</p>
+        </div>
+    </main>
 </body>
 </html>
