--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, hic nostrum veritatis culpa vel explicabo velit, amet iusto quia nesciunt at corporis ex iste ipsa?</p>
         </div>
     </main>
+    <footer>
+        <p>&copy All Right Reserved 2023</p>
+    </footer>
 </body>
 </html>
